fix: misaligned goal labels

--- a/styles/Challenges.module.css
+++ b/styles/Challenges.module.css
@@ -34,12 +34,13 @@
 }
 
 .checkboxContainer {
+  display: flex;
+  align-items: center;
   margin-bottom: 18px;
 }
 
 .checkbox + label {
   margin-left: 10px;
-  font-weight: 300;
 }
 
 .complete {
